# bmi270

./: CMakeLists.txt  README.md  app.overlay  prj.conf  west.yml
src/: bmi_wrapper.c  bmi_wrapper.h  main.c
